<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.imgal</groupId>
    <artifactId>imgal</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>        
        <junit.version>5.10.2</junit.version>
    </properties>

    <dependencies>
        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- build the Rust library -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>build-rust-library</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
			    <executable>cargo</executable>
			    <!-- build imgal-java only -->
			    <workingDirectory>${project.basedir}/../</workingDirectory>
                            <arguments>
                                <argument>build</argument>
                                <argument>--release</argument>
                            </arguments>
                            <skip>${skipRustBuild}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- copy the compiled Rust library into resources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy-native-lib</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/native</outputDirectory>
                            <resources>
                                <!-- Linux -->
                                <resource>
					<directory>${project.basedir}/../../target/release</directory>
                                    <includes>
                                        <include>libimgal_java.so</include>
                                    </includes>
                                    <excludes>
                                        <exclude>**/*.d</exclude>
                                        <exclude>**/*.rlib</exclude>
                                        <exclude>**/*.rmeta</exclude>
                                    </excludes>
                                </resource>
                                <!-- Windows -->
                                <resource>
					<directory>${project.basedir}/../../target/release</directory>
                                    <includes>
                                        <include>imgal_java.dll</include>
                                    </includes>
                                </resource>
                                <!-- macOS -->
                                <resource>
					<directory>${project.basedir}/../../target/release</directory>
                                    <includes>
                                        <include>libimgal_java.dylib</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Add the Maven Surefire plugin for running JUnit 5 tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- profile to skip Rust build if needed -->
    <profiles>
        <profile>
            <id>skipRustBuild</id>
            <properties>
                <skipRustBuild>true</skipRustBuild>
            </properties>
        </profile>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <skipRustBuild>false</skipRustBuild>
            </properties>
        </profile>
    </profiles>
</project>
